The following APIs have been written 1. Create Rover 2. Find Rover By ID
Swagger documentation was completed
